erDiagram
    USER {
        uuid id PK
        text externalId NULL "ID from external auth provider (e.g., Cognito sub)"
        text email NULL "User's email (unique when not null)"
        timestamp createdAt PK "Default CURRENT_TIMESTAMP"
        timestamp updatedAt PK "Default CURRENT_TIMESTAMP"
    }

    ONBOARDING_SESSION {
        uuid id PK
        uuid eventId FK "Link to Event"
        uuid userId FK "Link to User"
        uuid profileId FK "Link to Profile (Unique)"
        uuid participationId FK "Link to EventParticipation (Unique)"
        text status "Current state (STARTED, PROCESSING, etc.)"
        timestamp expiresAt NULL "Session expiry time"
        timestamp createdAt PK "Default CURRENT_TIMESTAMP"
        timestamp updatedAt PK "Default CURRENT_TIMESTAMP"
    }

    PROFILE {
        uuid id PK
        uuid userId FK "Link to User (Unique)"
        jsonb data NULL "Structured profile data (Default: '{}')"
        float completenessScore NULL "Internal score after extraction (Default: 0.0)"
        timestamp embeddingUpdatedAt NULL "Last time embedding was generated"
        timestamp createdAt PK "Default CURRENT_TIMESTAMP"
        timestamp updatedAt PK "Default CURRENT_TIMESTAMP"
    }

    EVENT {
        uuid id PK
        text name "Event name"
        text description NULL "Event description"
        timestamp startTime "Event start time"
        timestamp endTime NULL "Event end time"
        timestamp createdAt PK "Default CURRENT_TIMESTAMP"
        timestamp updatedAt PK "Default CURRENT_TIMESTAMP"
    }

    EVENT_PARTICIPATION {
        uuid id PK
        uuid userId FK "Link to User"
        uuid eventId FK "Link to Event"
        jsonb contextData NULL "Event-specific structured data (Default: '{}')"
        float completenessScore NULL "Internal score after extraction (Default: 0.0)"
        timestamp joinedAt PK "Time user joined event (Default: CURRENT_TIMESTAMP)"
        timestamp embeddingUpdatedAt NULL "Last time event context embedding was generated"
        timestamp createdAt PK "Default CURRENT_TIMESTAMP"
        timestamp updatedAt PK "Default CURRENT_TIMESTAMP"
    }

    USER ||--o{ PROFILE : "has (1:1)"
    USER ||--|{ EVENT_PARTICIPATION : "participates in"
    EVENT ||--|{ EVENT_PARTICIPATION : "has"
    USER ||--|| ONBOARDING_SESSION : "initiates"
    EVENT ||--|| ONBOARDING_SESSION : "is for"
    ONBOARDING_SESSION }|--|| PROFILE : "creates (1:1)"
    ONBOARDING_SESSION }|--|| EVENT_PARTICIPATION : "creates (1:1)"